--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,37 @@
-name: Build and Deploy to GKE
+name: Deploy to GKE
 
 on:
   push:
-    branches:
-      - main
-
-env:
-  PROJECT_ID: ${{ secrets.PROJECT_ID }}
-  CLUSTER: ${{ secrets.CLUSTER }}
-  REGION: ${{ secrets.REGION }}
-  IMAGE: gcr.io/${{ secrets.PROJECT_ID }}/python-app
+    branches: ["main"]
 
 jobs:
-  build-deploy:
-    name: Build & Deploy
+  build-and-deploy:
     runs-on: ubuntu-latest
 
+    env:
+      PROJECT_ID: ${{ secrets.PROJECT_ID }}
+      IMAGE: gcr.io/${{ secrets.PROJECT_ID }}/python-app
+      CLUSTER: ${{ secrets.CLUSTER }}
+      REGION: ${{ secrets.REGION }}
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout source
+      uses: actions/checkout@v3
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
-        with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.PROJECT_ID }}
-          export_default_credentials: true
+    - name: Debug Image name
+      run: echo "IMAGE=$IMAGE"
+      
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        project_id: ${{ secrets.PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Configure Docker to use gcloud
-        run: gcloud auth configure-docker
+    - name: Auth Docker to GCR
+      run: gcloud auth configure-docker --quiet
 
-      - name: Build Docker image
-        run: |
-          docker build -t $IMAGE:latest .
+    - name: Build Docker image
+      run: docker build -t $IMAGE:latest .
 
-      - name: Push Docker image
-        run: |
-          docker push $IMAGE:latest
-
-      - name: Get GKE credentials
-        run: |
-          gcloud container clusters get-credentials $CLUSTER --region $REGION
-
-      - name: Deploy to GKE
-        run: |
-          kubectl apply -f k8s/deployment.yaml
-          kubectl apply -f k8s/service.yaml
+    - name: Push Docker image
+      run: docker push $IMAGE:latest
