--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
         project_id: ${{ secrets.PROJECT_ID }}
         service_account_key: ${{ secrets.GCP_SA_KEY }}
 
+    - name: Debug Image name
+      run: echo "IMAGE=$IMAGE"
+
     - name: Auth Docker to GCR
       run: gcloud auth configure-docker --quiet
 
