--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         echo "IMAGE=$IMAGE"
 
     - name: Auth Docker to GCR
-      run: gcloud auth configure-docker
+      run: gcloud auth configure-docker us-west1-docker.pkg.dev
 
     - name: Build Docker image
       run: docker build -t $IMAGE:latest .
