--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,9 @@ jobs:
 
     - name: Debug Image name
       run: |
-        echo "PROJECT_ID=$PROJECT_ID"
-        echo "IMAGE=$IMAGE"
+        echo $PROJECT_ID
+        echo $IMAGE
+        echo $CLUSTER
 
     - name: Auth Docker to Artifact Registry
       run: |
