--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,11 @@ jobs:
       run: |
         gcloud container clusters get-credentials $CLUSTER --region $REGION --project $PROJECT_ID
 
+    - name: Install gke-gcloud-auth-plugin
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
     - name: Deploy to GKE via kubectl
       run: |
-        sudo apt-get install google-cloud-cli-gke-gcloud-auth-plugin
         kubectl set image deployment/python-app python-app=$IMAGE:$GITHUB_SHA --namespace=default
