--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,9 @@ jobs:
 
     - name: Deploy manifest to GKE
       run: |
+        cd app
         kubectl apply -f k8s/deployment.yaml
         kubectl apply -f k8s/service.yaml
-      working-directory: ./app
 
     - name: Deploy to GKE
       run: |
