chore: add install gke gcloud

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,8 @@ jobs:
 
     - name: Deploy manifest to GKE
       run: |
+        pwd
+        ls -la  
         kubectl apply -f app/k8s/deployment.yaml
         kubectl apply -f app/k8s/service.yaml
 
