--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 keyfile.json
+.env
+*.tfstate
+*.tfstate.*
+
+crash.log
+
+*.tfvars
+*.tfvars.json
+
+*.tfplan
+
+.terraform/
+
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+.terraformrc
+terraform.rc
