--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: python-app
-        image: us-west1-docker.pkg.dev/${{ vars.PROJECT_ID }}/python-repo/python-app:latest
+        image: us-west1-docker.pkg.dev/${{ vars.PROJECT_ID }}/wuoc-repo/python-app:latest
         ports:
         - containerPort: 5000
